--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
     ],
     "require": {
         "composer/installers": "^2.0",
+        "drupal/admin_content_notification": "^4.1",
         "drupal/bootstrap": "^3.31",
         "drupal/config_split": "^2.0",
         "drupal/core-composer-scaffold": "^10.3",
@@ -25,6 +26,7 @@
         "drupal/flexslider": "^3.0@alpha",
         "drupal/pathauto": "^1.12",
         "drupal/permissions_by_term": "^3.1",
+        "drupal/smtp": "^1.3",
         "drupal/superfish": "^1.7",
         "drupal/tac_lite": "^1.7",
         "drupal/token": "^1.14",
